Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8930

sanity-lfsck test_18f: @@@@@@ FAIL: (2) MDS3 is not the expected 'partial'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for nasf <fan.yong@intel.com>

      Please provide additional information about the failure here.

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/6fd0b886-be4d-11e6-9b28-5254006e85c2.

            yong.fan nasf (Inactive)
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: